<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:background="@drawable/registerpicture">


    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="20" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:drawableLeft="@android:drawable/btn_star_big_off"
        android:ems="15"
        android:background="#11000000"
        android:hint="@string/create_username"
        android:inputType="text"
        android:digits="0,1,2,3,4,5,6,7,8,9,abcdefghijklmnopqrstuvwxyz,_,ABCDEFGHIJKLMNOPQRSTUVWXYZ"
        tools:ignore="Autofill"
        android:drawableStart="@android:drawable/btn_star_big_off" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10" />

    <EditText

        android:id="@+id/email_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#11000000"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:drawableLeft="@android:drawable/sym_action_email"
        android:ems="15"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:digits="0,1,2,3,4,5,6,7,8,9,abcdefghijklmnopqrstuvwxyz,_,@,., ABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:drawableStart="@android:drawable/sym_action_email"
        tools:ignore="Autofill" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="wrap_content"
        android:background="#11000000"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:ems="15"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:digits="0,1,2,3,4,5,6,7,8,9,abcdefghijklmnopqrstuvwxyz,_, ABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        tools:ignore="Autofill" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="wrap_content"
        android:background="#11000000"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:ems="15"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:digits="0,1,2,3,4,5,6,7,8,9,abcdefghijklmnopqrstuvwxyz,_, ABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        tools:ignore="Autofill" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10" />

    <Button
        android:textColor="#FFEBEB"
        android:textSize="23sp"

        android:background="@drawable/registerbutton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="5"
        android:onClick="registerAccount"

        android:ems="10"
        android:text="@string/register_account" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5" />
    
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="14sp"
        android:textAlignment="center"
        android:text="@string/already_member"
        android:textColor="@color/smallBlueText"
        android:onClick="backToLogin"
        />


</LinearLayout>