<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:background="@drawable/loginpage">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:ems="5"
        android:paddingLeft="5dp"
        android:text="@string/memeroom_text"
        android:textAlignment="center"
        android:textColor="#FFFF0D"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="serif"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:background="#11000000"
        android:digits="0,1,2,3,4,5,6,7,8,9,abcdefghijklmnopqrstuvwxyz,.,_,@, ABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:drawableLeft="@android:drawable/sym_action_email"
        android:ems="15"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:paddingLeft="5dp"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold"
        tools:ignore="Autofill,RtlHardcoded,RtlSymmetry" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="12" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="19sp"
        android:layout_gravity = "center_horizontal"
        android:ems="15"
        android:textStyle="bold"
        android:hint="@string/password_text"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:background="#11000000"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:digits="0,1,2,3,4,5,6,7,8,9,abcdefghijklmnopqrstuwvxyz,_, ABCDEFGHIJKLMNOPQRSTUVWXYZ"
        tools:ignore="Autofill,RtlHardcoded" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="20" />

    <Button
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:layout_weight="1"
        android:onClick="login"
        android:background="@drawable/loginpic"
        android:ems="17"
        android:paddingLeft="80dp"
        android:paddingRight="80dp"

        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/login_text" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:onClick="DisplayCreateAccount"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/smallBlueText"
        android:textStyle="italic"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="15" />

</LinearLayout>