<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profilepage"
    android:orientation="vertical"
    android:weightSum="100">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/addProfilePic"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/circlebutton"
            android:onClick="takeProfilePic"
            android:scaleType="centerCrop"
            android:textSize="20sp"
            android:contentDescription="@string/profile_picture_goes_here" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@color/lightorange"
            android:onClick="logOut"
            android:text="@string/log_out"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="5">


        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="displayFollowing"
            android:text="@string/following" />


        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="#000"
            android:gravity="center_vertical"
            android:onClick="getLocation"
            android:src="@drawable/add_location"
            android:textColor="#FFFF"
            android:textSize="30sp"
            android:contentDescription="@string/get_the_location" />
    </LinearLayout>

    <TextView
        android:id="@+id/profile_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.3"
        android:textColor="#000"
        android:textSize="30sp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100">

        <GridLayout
            android:id="@+id/grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:columnCount="3">


        </GridLayout>
    </ScrollView>

</LinearLayout>